--- a/Q1_folder/Q1.ipynb
+++ b/Q1_folder/Q1.ipynb
@@ -1,22 +1,239 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ed6198f1-7d89-4c9e-923d-aae02de132a7",
+   "metadata": {},
+   "source": [
+    "# Question 1 – Data Exploration\n",
+    "\n",
+    "In this notebook, we will explore the Fashion-MNIST dataset and prepare it for modelling."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "768cd127-c3ae-4c94-b5cd-2022750fd90b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-11T12:58:51.071985Z",
-     "iopub.status.busy": "2025-12-11T12:58:51.067831Z",
-     "iopub.status.idle": "2025-12-11T12:58:51.091755Z",
-     "shell.execute_reply": "2025-12-11T12:58:51.089070Z",
-     "shell.execute_reply.started": "2025-12-11T12:58:51.071900Z"
+     "iopub.execute_input": "2025-12-11T18:00:28.218436Z",
+     "iopub.status.busy": "2025-12-11T18:00:28.217580Z",
+     "iopub.status.idle": "2025-12-11T18:00:34.588414Z",
+     "shell.execute_reply": "2025-12-11T18:00:34.585631Z",
+     "shell.execute_reply.started": "2025-12-11T18:00:28.218356Z"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>pixel1</th>\n",
+       "      <th>pixel2</th>\n",
+       "      <th>pixel3</th>\n",
+       "      <th>pixel4</th>\n",
+       "      <th>pixel5</th>\n",
+       "      <th>pixel6</th>\n",
+       "      <th>pixel7</th>\n",
+       "      <th>pixel8</th>\n",
+       "      <th>pixel9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>pixel775</th>\n",
+       "      <th>pixel776</th>\n",
+       "      <th>pixel777</th>\n",
+       "      <th>pixel778</th>\n",
+       "      <th>pixel779</th>\n",
+       "      <th>pixel780</th>\n",
+       "      <th>pixel781</th>\n",
+       "      <th>pixel782</th>\n",
+       "      <th>pixel783</th>\n",
+       "      <th>pixel784</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>8</td>\n",
+       "      <td>...</td>\n",
+       "      <td>103</td>\n",
+       "      <td>87</td>\n",
+       "      <td>56</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>34</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>53</td>\n",
+       "      <td>99</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>63</td>\n",
+       "      <td>53</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>137</td>\n",
+       "      <td>126</td>\n",
+       "      <td>140</td>\n",
+       "      <td>0</td>\n",
+       "      <td>133</td>\n",
+       "      <td>224</td>\n",
+       "      <td>222</td>\n",
+       "      <td>56</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 785 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   label  pixel1  pixel2  pixel3  pixel4  pixel5  pixel6  pixel7  pixel8  \\\n",
+       "0      0       0       0       0       0       0       0       0       9   \n",
+       "1      1       0       0       0       0       0       0       0       0   \n",
+       "2      2       0       0       0       0       0       0      14      53   \n",
+       "3      2       0       0       0       0       0       0       0       0   \n",
+       "4      3       0       0       0       0       0       0       0       0   \n",
+       "\n",
+       "   pixel9  ...  pixel775  pixel776  pixel777  pixel778  pixel779  pixel780  \\\n",
+       "0       8  ...       103        87        56         0         0         0   \n",
+       "1       0  ...        34         0         0         0         0         0   \n",
+       "2      99  ...         0         0         0         0        63        53   \n",
+       "3       0  ...       137       126       140         0       133       224   \n",
+       "4       0  ...         0         0         0         0         0         0   \n",
+       "\n",
+       "   pixel781  pixel782  pixel783  pixel784  \n",
+       "0         0         0         0         0  \n",
+       "1         0         0         0         0  \n",
+       "2        31         0         0         0  \n",
+       "3       222        56         0         0  \n",
+       "4         0         0         0         0  \n",
+       "\n",
+       "[5 rows x 785 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from urllib.request import urlopen"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Example: load your dataset\n",
+    "df = pd.read_csv(\"../data/fashion-mnist_test.csv\")\n",
+    "\n",
+    "df.head()\n"
    ]
   },
   {
