Update functions.py imports and reshape tensors in Q2 notebook

--- a/Q2_folder/Q2.ipynb
+++ b/Q2_folder/Q2.ipynb
@@ -2,11 +2,95 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6bf6aa9d-b254-40ad-aa28-a622881559b2",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-12T22:35:38.010634Z",
+     "iopub.status.busy": "2025-12-12T22:35:38.009226Z",
+     "iopub.status.idle": "2025-12-12T22:35:38.053770Z",
+     "shell.execute_reply": "2025-12-12T22:35:38.048828Z",
+     "shell.execute_reply.started": "2025-12-12T22:35:38.010575Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'get_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [3], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Load Fashion-MNIST\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m X, y \u001b[38;5;241m=\u001b[39m \u001b[43mget_data\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata/fashion-mnist_test.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)   \u001b[38;5;66;03m# normalised to 0–1\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Split\u001b[39;00m\n\u001b[1;32m      5\u001b[0m X_train, X_val, y_train, y_val \u001b[38;5;241m=\u001b[39m data_split_train_val(X, y)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'get_data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Load Fashion-MNIST\n",
+    "X, y = get_data(\"data/fashion-mnist_test.csv\")   # normalised to 0–1\n",
+    "\n",
+    "# Split\n",
+    "X_train, X_val, y_train, y_val = data_split_train_val(X, y)\n",
+    "\n",
+    "print(\"Train shape:\", X_train.shape)\n",
+    "print(\"Val shape:\", X_val.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd0e6685-26a8-425e-8c27-0f1e7a38ee09",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# convert numpy arrays to PyTorch tensors\n",
+    "X_train_tensor = torch.from_numpy(X_train).float()\n",
+    "y_train_tensor = torch.from_numpy(y_train).long()\n",
+    "\n",
+    "X_val_tensor = torch.from_numpy(X_val).float()\n",
+    "y_val_tensor = torch.from_numpy(y_val).long()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6b68a5b-87de-4264-9626-8a28a732f793",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Before reshape:\")\n",
+    "print(\"X_train_tensor shape:\", X_train_tensor.shape)\n",
+    "print(\"X_val_tensor shape:\", X_val_tensor.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df46bafd-d447-4724-9d51-9c13915df2fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_train = X_train_tensor.shape[0]\n",
+    "num_val = X_val_tensor.shape[0]\n",
+    "\n",
+    "print(num_train, num_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d8d7adc-a3e7-4948-83a7-d1b1010e9f55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_tensor = X_train_tensor.reshape(num_train, 1, 28, 28)\n",
+    "X_val_tensor = X_val_tensor.reshape(num_val, 1, 28, 28)\n",
+    "print(\"After reshape:\")\n",
+    "print(\"X_train_tensor shape:\", X_train_tensor.shape)\n",
+    "print(\"X_val_tensor shape:\", X_val_tensor.shape)"
+   ]
   }
  ],
  "metadata": {
