--- a/Q2_folder/Q2.ipynb
+++ b/Q2_folder/Q2.ipynb
@@ -2,34 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
+   "id": "ef4232ed-2c39-48de-bb6c-1127f9406f73",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-12T23:13:04.984247Z",
+     "iopub.status.busy": "2025-12-12T23:13:04.983389Z",
+     "iopub.status.idle": "2025-12-12T23:13:04.996347Z",
+     "shell.execute_reply": "2025-12-12T23:13:04.994054Z",
+     "shell.execute_reply.started": "2025-12-12T23:13:04.984184Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"..\")   \n",
+    "from functions import get_data, data_split_train_val\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "6bf6aa9d-b254-40ad-aa28-a622881559b2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-12T22:35:38.010634Z",
-     "iopub.status.busy": "2025-12-12T22:35:38.009226Z",
-     "iopub.status.idle": "2025-12-12T22:35:38.053770Z",
-     "shell.execute_reply": "2025-12-12T22:35:38.048828Z",
-     "shell.execute_reply.started": "2025-12-12T22:35:38.010575Z"
+     "iopub.execute_input": "2025-12-12T23:13:06.560049Z",
+     "iopub.status.busy": "2025-12-12T23:13:06.558783Z",
+     "iopub.status.idle": "2025-12-12T23:13:09.606233Z",
+     "shell.execute_reply": "2025-12-12T23:13:09.603463Z",
+     "shell.execute_reply.started": "2025-12-12T23:13:06.559976Z"
     },
     "tags": []
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'get_data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [3], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Load Fashion-MNIST\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m X, y \u001b[38;5;241m=\u001b[39m \u001b[43mget_data\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata/fashion-mnist_test.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)   \u001b[38;5;66;03m# normalised to 0–1\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Split\u001b[39;00m\n\u001b[1;32m      5\u001b[0m X_train, X_val, y_train, y_val \u001b[38;5;241m=\u001b[39m data_split_train_val(X, y)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'get_data' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train shape: (8000, 784)\n",
+      "Val shape: (2000, 784)\n"
      ]
     }
    ],
    "source": [
     "# Load Fashion-MNIST\n",
-    "X, y = get_data(\"data/fashion-mnist_test.csv\")   # normalised to 0–1\n",
+    "X, y = get_data(\"../data/fashion-mnist_test.csv\")   # normalised to 0–1\n",
     "\n",
     "# Split\n",
     "X_train, X_val, y_train, y_val = data_split_train_val(X, y)\n",
@@ -40,9 +61,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "fd0e6685-26a8-425e-8c27-0f1e7a38ee09",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-12T23:13:09.610357Z",
+     "iopub.status.busy": "2025-12-12T23:13:09.609761Z",
+     "iopub.status.idle": "2025-12-12T23:13:09.636340Z",
+     "shell.execute_reply": "2025-12-12T23:13:09.631616Z",
+     "shell.execute_reply.started": "2025-12-12T23:13:09.610302Z"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# convert numpy arrays to PyTorch tensors\n",
@@ -55,10 +85,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "b6b68a5b-87de-4264-9626-8a28a732f793",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-12T23:13:10.752562Z",
+     "iopub.status.busy": "2025-12-12T23:13:10.751749Z",
+     "iopub.status.idle": "2025-12-12T23:13:10.766170Z",
+     "shell.execute_reply": "2025-12-12T23:13:10.763241Z",
+     "shell.execute_reply.started": "2025-12-12T23:13:10.752504Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before reshape:\n",
+      "X_train_tensor shape: torch.Size([8000, 784])\n",
+      "X_val_tensor shape: torch.Size([2000, 784])\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Before reshape:\")\n",
     "print(\"X_train_tensor shape:\", X_train_tensor.shape)\n",
@@ -67,10 +115,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "df46bafd-d447-4724-9d51-9c13915df2fd",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-12T23:13:13.907862Z",
+     "iopub.status.busy": "2025-12-12T23:13:13.906993Z",
+     "iopub.status.idle": "2025-12-12T23:13:13.919168Z",
+     "shell.execute_reply": "2025-12-12T23:13:13.917013Z",
+     "shell.execute_reply.started": "2025-12-12T23:13:13.907804Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8000 2000\n"
+     ]
+    }
+   ],
    "source": [
     "num_train = X_train_tensor.shape[0]\n",
     "num_val = X_val_tensor.shape[0]\n",
@@ -80,17 +144,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "4d8d7adc-a3e7-4948-83a7-d1b1010e9f55",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-12T23:13:49.158284Z",
+     "iopub.status.busy": "2025-12-12T23:13:49.157363Z",
+     "iopub.status.idle": "2025-12-12T23:13:49.174752Z",
+     "shell.execute_reply": "2025-12-12T23:13:49.171918Z",
+     "shell.execute_reply.started": "2025-12-12T23:13:49.158222Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train_tensor reshape: torch.Size([8000, 1, 28, 28])\n",
+      "X_val_tensor reshape: torch.Size([2000, 1, 28, 28])\n"
+     ]
+    }
+   ],
    "source": [
     "X_train_tensor = X_train_tensor.reshape(num_train, 1, 28, 28)\n",
     "X_val_tensor = X_val_tensor.reshape(num_val, 1, 28, 28)\n",
-    "print(\"After reshape:\")\n",
-    "print(\"X_train_tensor shape:\", X_train_tensor.shape)\n",
-    "print(\"X_val_tensor shape:\", X_val_tensor.shape)"
+    "print(\"X_train_tensor reshape:\", X_train_tensor.shape)\n",
+    "print(\"X_val_tensor reshape:\", X_val_tensor.shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "4d2110d8-ecbf-409d-b040-9c5d22f85808",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-12T23:21:46.391454Z",
+     "iopub.status.busy": "2025-12-12T23:21:46.390227Z",
+     "iopub.status.idle": "2025-12-12T23:21:46.413246Z",
+     "shell.execute_reply": "2025-12-12T23:21:46.410784Z",
+     "shell.execute_reply.started": "2025-12-12T23:21:46.391378Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "class FashionMNIST_CNN(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.conv1 = nn.Conv2d(1, 8, kernel_size=3)\n",
+    "        self.relu = nn.ReLU()\n",
+    "        self.pool = nn.MaxPool2d(2, 2)\n",
+    "        \n",
+    "        self.conv2 = nn.Conv2d(8, 16, kernel_size=3)\n",
+    "        \n",
+    "        self.fc1 = nn.Linear(16 * 5 * 5, 128)\n",
+    "        self.fc2 = nn.Linear(128, 10)\n",
+    "        \n",
+    "        def forward(self, x):\n",
+    "            x = self.relu(self.conv1(x))\n",
+    "            x = self.pool(x)\n",
+    "\n",
+    "            x = self.relu(self.conv2(x))\n",
+    "            x = self.pool(x)\n",
+    "\n",
+    "            x = torch.flatten(x, 1)   # flatten\n",
+    "\n",
+    "            x = self.relu(self.fc1(x))\n",
+    "            x = self.fc2(x)\n",
+    "            return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e52838e8-a9e0-470d-abdb-57914b434963",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
