--- a/Q2_folder/Q2.ipynb
+++ b/Q2_folder/Q2.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "ef4232ed-2c39-48de-bb6c-1127f9406f73",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-12T23:13:04.984247Z",
-     "iopub.status.busy": "2025-12-12T23:13:04.983389Z",
-     "iopub.status.idle": "2025-12-12T23:13:04.996347Z",
-     "shell.execute_reply": "2025-12-12T23:13:04.994054Z",
-     "shell.execute_reply.started": "2025-12-12T23:13:04.984184Z"
+     "iopub.execute_input": "2025-12-13T00:39:50.881203Z",
+     "iopub.status.busy": "2025-12-13T00:39:50.878539Z",
+     "iopub.status.idle": "2025-12-13T00:39:57.091770Z",
+     "shell.execute_reply": "2025-12-13T00:39:57.089583Z",
+     "shell.execute_reply.started": "2025-12-13T00:39:50.881044Z"
     },
     "tags": []
    },
@@ -26,15 +26,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "6bf6aa9d-b254-40ad-aa28-a622881559b2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-12T23:13:06.560049Z",
-     "iopub.status.busy": "2025-12-12T23:13:06.558783Z",
-     "iopub.status.idle": "2025-12-12T23:13:09.606233Z",
-     "shell.execute_reply": "2025-12-12T23:13:09.603463Z",
-     "shell.execute_reply.started": "2025-12-12T23:13:06.559976Z"
+     "iopub.execute_input": "2025-12-13T00:39:57.096357Z",
+     "iopub.status.busy": "2025-12-13T00:39:57.095526Z",
+     "iopub.status.idle": "2025-12-13T00:39:59.845764Z",
+     "shell.execute_reply": "2025-12-13T00:39:59.842521Z",
+     "shell.execute_reply.started": "2025-12-13T00:39:57.096303Z"
     },
     "tags": []
    },
@@ -61,15 +61,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "fd0e6685-26a8-425e-8c27-0f1e7a38ee09",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-12T23:13:09.610357Z",
-     "iopub.status.busy": "2025-12-12T23:13:09.609761Z",
-     "iopub.status.idle": "2025-12-12T23:13:09.636340Z",
-     "shell.execute_reply": "2025-12-12T23:13:09.631616Z",
-     "shell.execute_reply.started": "2025-12-12T23:13:09.610302Z"
+     "iopub.execute_input": "2025-12-13T00:39:59.849919Z",
+     "iopub.status.busy": "2025-12-13T00:39:59.849268Z",
+     "iopub.status.idle": "2025-12-13T00:39:59.862992Z",
+     "shell.execute_reply": "2025-12-13T00:39:59.860761Z",
+     "shell.execute_reply.started": "2025-12-13T00:39:59.849864Z"
     },
     "tags": []
    },
@@ -85,16 +85,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "b6b68a5b-87de-4264-9626-8a28a732f793",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-12T23:13:10.752562Z",
-     "iopub.status.busy": "2025-12-12T23:13:10.751749Z",
-     "iopub.status.idle": "2025-12-12T23:13:10.766170Z",
-     "shell.execute_reply": "2025-12-12T23:13:10.763241Z",
-     "shell.execute_reply.started": "2025-12-12T23:13:10.752504Z"
-    }
+     "iopub.execute_input": "2025-12-13T00:40:00.126709Z",
+     "iopub.status.busy": "2025-12-13T00:40:00.125877Z",
+     "iopub.status.idle": "2025-12-13T00:40:00.137812Z",
+     "shell.execute_reply": "2025-12-13T00:40:00.135994Z",
+     "shell.execute_reply.started": "2025-12-13T00:40:00.126622Z"
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -115,16 +116,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "df46bafd-d447-4724-9d51-9c13915df2fd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-12T23:13:13.907862Z",
-     "iopub.status.busy": "2025-12-12T23:13:13.906993Z",
-     "iopub.status.idle": "2025-12-12T23:13:13.919168Z",
-     "shell.execute_reply": "2025-12-12T23:13:13.917013Z",
-     "shell.execute_reply.started": "2025-12-12T23:13:13.907804Z"
-    }
+     "iopub.execute_input": "2025-12-13T00:40:05.735202Z",
+     "iopub.status.busy": "2025-12-13T00:40:05.734293Z",
+     "iopub.status.idle": "2025-12-13T00:40:05.746019Z",
+     "shell.execute_reply": "2025-12-13T00:40:05.743847Z",
+     "shell.execute_reply.started": "2025-12-13T00:40:05.735141Z"
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -144,15 +146,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "4d8d7adc-a3e7-4948-83a7-d1b1010e9f55",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-12T23:13:49.158284Z",
-     "iopub.status.busy": "2025-12-12T23:13:49.157363Z",
-     "iopub.status.idle": "2025-12-12T23:13:49.174752Z",
-     "shell.execute_reply": "2025-12-12T23:13:49.171918Z",
-     "shell.execute_reply.started": "2025-12-12T23:13:49.158222Z"
+     "iopub.execute_input": "2025-12-13T00:40:08.521603Z",
+     "iopub.status.busy": "2025-12-13T00:40:08.520759Z",
+     "iopub.status.idle": "2025-12-13T00:40:08.535912Z",
+     "shell.execute_reply": "2025-12-13T00:40:08.533750Z",
+     "shell.execute_reply.started": "2025-12-13T00:40:08.521546Z"
     },
     "tags": []
    },
@@ -175,15 +177,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "4d2110d8-ecbf-409d-b040-9c5d22f85808",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-12T23:21:46.391454Z",
-     "iopub.status.busy": "2025-12-12T23:21:46.390227Z",
-     "iopub.status.idle": "2025-12-12T23:21:46.413246Z",
-     "shell.execute_reply": "2025-12-12T23:21:46.410784Z",
-     "shell.execute_reply.started": "2025-12-12T23:21:46.391378Z"
+     "iopub.execute_input": "2025-12-13T00:40:11.656303Z",
+     "iopub.status.busy": "2025-12-13T00:40:11.655465Z",
+     "iopub.status.idle": "2025-12-13T00:40:11.672477Z",
+     "shell.execute_reply": "2025-12-13T00:40:11.670611Z",
+     "shell.execute_reply.started": "2025-12-13T00:40:11.656245Z"
     },
     "tags": []
    },
@@ -192,6 +194,7 @@
     "class FashionMNIST_CNN(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
+    "        \n",
     "        self.conv1 = nn.Conv2d(1, 8, kernel_size=3)\n",
     "        self.relu = nn.ReLU()\n",
     "        self.pool = nn.MaxPool2d(2, 2)\n",
@@ -200,28 +203,134 @@
     "        \n",
     "        self.fc1 = nn.Linear(16 * 5 * 5, 128)\n",
     "        self.fc2 = nn.Linear(128, 10)\n",
-    "        \n",
-    "        def forward(self, x):\n",
-    "            x = self.relu(self.conv1(x))\n",
-    "            x = self.pool(x)\n",
     "\n",
-    "            x = self.relu(self.conv2(x))\n",
-    "            x = self.pool(x)\n",
+    "    def forward(self, x):\n",
+    "        x = self.relu(self.conv1(x))\n",
+    "        x = self.pool(x)\n",
     "\n",
-    "            x = torch.flatten(x, 1)   # flatten\n",
+    "        x = self.relu(self.conv2(x))\n",
+    "        x = self.pool(x)\n",
     "\n",
-    "            x = self.relu(self.fc1(x))\n",
-    "            x = self.fc2(x)\n",
-    "            return x"
+    "        x = torch.flatten(x, 1)   # flatten\n",
+    "\n",
+    "        x = self.relu(self.fc1(x))\n",
+    "        x = self.fc2(x)\n",
+    "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e52838e8-a9e0-470d-abdb-57914b434963",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-13T00:40:14.260469Z",
+     "iopub.status.busy": "2025-12-13T00:40:14.259482Z",
+     "iopub.status.idle": "2025-12-13T00:40:14.277972Z",
+     "shell.execute_reply": "2025-12-13T00:40:14.275946Z",
+     "shell.execute_reply.started": "2025-12-13T00:40:14.260404Z"
+    },
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "data = FashionMNIST_CNN()\n",
+    "\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.Adam(data.parameters(), lr=0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "e8c2edb6-1b51-4b04-bb7c-40241a3d02d4",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-13T00:52:34.653453Z",
+     "iopub.status.busy": "2025-12-13T00:52:34.652446Z",
+     "iopub.status.idle": "2025-12-13T00:53:59.759987Z",
+     "shell.execute_reply": "2025-12-13T00:53:59.757144Z",
+     "shell.execute_reply.started": "2025-12-13T00:52:34.653392Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/21, Loss: 0.3448\n",
+      "Epoch 2/21, Loss: 0.3481\n",
+      "Epoch 3/21, Loss: 0.3399\n",
+      "Epoch 4/21, Loss: 0.3397\n",
+      "Epoch 5/21, Loss: 0.3367\n",
+      "Epoch 6/21, Loss: 0.3310\n",
+      "Epoch 7/21, Loss: 0.3330\n",
+      "Epoch 8/21, Loss: 0.3246\n",
+      "Epoch 9/21, Loss: 0.3269\n",
+      "Epoch 10/21, Loss: 0.3214\n",
+      "Epoch 11/21, Loss: 0.3197\n",
+      "Epoch 12/21, Loss: 0.3170\n",
+      "Epoch 13/21, Loss: 0.3158\n",
+      "Epoch 14/21, Loss: 0.3116\n",
+      "Epoch 15/21, Loss: 0.3099\n",
+      "Epoch 16/21, Loss: 0.3077\n",
+      "Epoch 17/21, Loss: 0.3055\n",
+      "Epoch 18/21, Loss: 0.3033\n",
+      "Epoch 19/21, Loss: 0.2997\n",
+      "Epoch 20/21, Loss: 0.2976\n",
+      "Epoch 21/21, Loss: 0.2953\n"
+     ]
+    }
+   ],
+   "source": [
+    "epochs =  21 \n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "    optimizer.zero_grad()\n",
+    "    \n",
+    "    outputs = data(X_train_tensor)\n",
+    "    loss = criterion(outputs, y_train_tensor)\n",
+    "    \n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "    \n",
+    "    print(f\"Epoch {epoch+1}/{epochs}, Loss: {loss.item():.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "ff1e744a-7cc4-4aa5-84ff-dbe0a1739461",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-13T00:53:59.845298Z",
+     "iopub.status.busy": "2025-12-13T00:53:59.843888Z",
+     "iopub.status.idle": "2025-12-13T00:54:00.457013Z",
+     "shell.execute_reply": "2025-12-13T00:54:00.454552Z",
+     "shell.execute_reply.started": "2025-12-13T00:53:59.845224Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 0.8560000061988831\n"
+     ]
+    }
+   ],
+   "source": [
+    "with torch.no_grad():\n",
+    "    outputs = data(X_val_tensor)\n",
+    "    predictions = torch.argmax(outputs, 1)\n",
+    "    correct = predictions == y_val_tensor\n",
+    "    correct_float = correct.float()\n",
+    "    accuracy = correct_float.mean().item()\n",
+    "    \n",
+    "print(\"Validation accuracy:\", accuracy)"
+   ]
   }
  ],
  "metadata": {
