Changed Q2 activation to tanh and wrote Q3 using ReLU activation

--- a/Q2_folder/Q2.ipynb
+++ b/Q2_folder/Q2.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ef4232ed-2c39-48de-bb6c-1127f9406f73",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-13T00:39:50.881203Z",
-     "iopub.status.busy": "2025-12-13T00:39:50.878539Z",
-     "iopub.status.idle": "2025-12-13T00:39:57.091770Z",
-     "shell.execute_reply": "2025-12-13T00:39:57.089583Z",
-     "shell.execute_reply.started": "2025-12-13T00:39:50.881044Z"
+     "iopub.execute_input": "2025-12-13T13:56:20.565029Z",
+     "iopub.status.busy": "2025-12-13T13:56:20.563805Z",
+     "iopub.status.idle": "2025-12-13T13:56:50.852754Z",
+     "shell.execute_reply": "2025-12-13T13:56:50.842259Z",
+     "shell.execute_reply.started": "2025-12-13T13:56:20.564948Z"
     },
     "tags": []
    },
@@ -26,15 +26,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6bf6aa9d-b254-40ad-aa28-a622881559b2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-13T00:39:57.096357Z",
-     "iopub.status.busy": "2025-12-13T00:39:57.095526Z",
-     "iopub.status.idle": "2025-12-13T00:39:59.845764Z",
-     "shell.execute_reply": "2025-12-13T00:39:59.842521Z",
-     "shell.execute_reply.started": "2025-12-13T00:39:57.096303Z"
+     "iopub.execute_input": "2025-12-13T13:56:50.860561Z",
+     "iopub.status.busy": "2025-12-13T13:56:50.856380Z",
+     "iopub.status.idle": "2025-12-13T13:57:05.157532Z",
+     "shell.execute_reply": "2025-12-13T13:57:05.151380Z",
+     "shell.execute_reply.started": "2025-12-13T13:56:50.860497Z"
     },
     "tags": []
    },
@@ -56,20 +56,20 @@
     "X_train, X_val, y_train, y_val = data_split_train_val(X, y)\n",
     "\n",
     "print(\"Train shape:\", X_train.shape)\n",
-    "print(\"Val shape:\", X_val.shape)\n"
+    "print(\"Val shape:\", X_val.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "fd0e6685-26a8-425e-8c27-0f1e7a38ee09",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-13T00:39:59.849919Z",
-     "iopub.status.busy": "2025-12-13T00:39:59.849268Z",
-     "iopub.status.idle": "2025-12-13T00:39:59.862992Z",
-     "shell.execute_reply": "2025-12-13T00:39:59.860761Z",
-     "shell.execute_reply.started": "2025-12-13T00:39:59.849864Z"
+     "iopub.execute_input": "2025-12-13T13:57:05.248566Z",
+     "iopub.status.busy": "2025-12-13T13:57:05.160594Z",
+     "iopub.status.idle": "2025-12-13T13:57:05.439862Z",
+     "shell.execute_reply": "2025-12-13T13:57:05.358492Z",
+     "shell.execute_reply.started": "2025-12-13T13:57:05.248439Z"
     },
     "tags": []
    },
@@ -85,15 +85,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b6b68a5b-87de-4264-9626-8a28a732f793",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-13T00:40:00.126709Z",
-     "iopub.status.busy": "2025-12-13T00:40:00.125877Z",
-     "iopub.status.idle": "2025-12-13T00:40:00.137812Z",
-     "shell.execute_reply": "2025-12-13T00:40:00.135994Z",
-     "shell.execute_reply.started": "2025-12-13T00:40:00.126622Z"
+     "iopub.execute_input": "2025-12-13T13:57:05.447594Z",
+     "iopub.status.busy": "2025-12-13T13:57:05.446542Z",
+     "iopub.status.idle": "2025-12-13T13:57:05.462388Z",
+     "shell.execute_reply": "2025-12-13T13:57:05.459195Z",
+     "shell.execute_reply.started": "2025-12-13T13:57:05.447519Z"
     },
     "tags": []
    },
@@ -116,15 +116,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "df46bafd-d447-4724-9d51-9c13915df2fd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-13T00:40:05.735202Z",
-     "iopub.status.busy": "2025-12-13T00:40:05.734293Z",
-     "iopub.status.idle": "2025-12-13T00:40:05.746019Z",
-     "shell.execute_reply": "2025-12-13T00:40:05.743847Z",
-     "shell.execute_reply.started": "2025-12-13T00:40:05.735141Z"
+     "iopub.execute_input": "2025-12-13T13:57:05.465525Z",
+     "iopub.status.busy": "2025-12-13T13:57:05.464962Z",
+     "iopub.status.idle": "2025-12-13T13:57:05.556802Z",
+     "shell.execute_reply": "2025-12-13T13:57:05.553050Z",
+     "shell.execute_reply.started": "2025-12-13T13:57:05.465472Z"
     },
     "tags": []
    },
@@ -146,15 +146,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "4d8d7adc-a3e7-4948-83a7-d1b1010e9f55",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-13T00:40:08.521603Z",
-     "iopub.status.busy": "2025-12-13T00:40:08.520759Z",
-     "iopub.status.idle": "2025-12-13T00:40:08.535912Z",
-     "shell.execute_reply": "2025-12-13T00:40:08.533750Z",
-     "shell.execute_reply.started": "2025-12-13T00:40:08.521546Z"
+     "iopub.execute_input": "2025-12-13T13:57:05.562770Z",
+     "iopub.status.busy": "2025-12-13T13:57:05.560809Z",
+     "iopub.status.idle": "2025-12-13T13:57:05.651357Z",
+     "shell.execute_reply": "2025-12-13T13:57:05.648779Z",
+     "shell.execute_reply.started": "2025-12-13T13:57:05.562709Z"
     },
     "tags": []
    },
@@ -177,29 +177,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "4d2110d8-ecbf-409d-b040-9c5d22f85808",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-13T00:40:11.656303Z",
-     "iopub.status.busy": "2025-12-13T00:40:11.655465Z",
-     "iopub.status.idle": "2025-12-13T00:40:11.672477Z",
-     "shell.execute_reply": "2025-12-13T00:40:11.670611Z",
-     "shell.execute_reply.started": "2025-12-13T00:40:11.656245Z"
+     "iopub.execute_input": "2025-12-13T13:57:05.655499Z",
+     "iopub.status.busy": "2025-12-13T13:57:05.654900Z",
+     "iopub.status.idle": "2025-12-13T13:57:05.839109Z",
+     "shell.execute_reply": "2025-12-13T13:57:05.757858Z",
+     "shell.execute_reply.started": "2025-12-13T13:57:05.655444Z"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "class FashionMNIST_CNN(nn.Module):\n",
+    "class CNN_Tanh(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        \n",
-    "        self.conv1 = nn.Conv2d(1, 8, kernel_size=3)\n",
-    "        self.relu = nn.ReLU()\n",
+    "        self.conv1 = nn.Conv2d(1, 8, 3)\n",
+    "        self.relu = nn.ReLU(0.01)\n",
     "        self.pool = nn.MaxPool2d(2, 2)\n",
     "        \n",
-    "        self.conv2 = nn.Conv2d(8, 16, kernel_size=3)\n",
+    "        self.conv2 = nn.Conv2d(8, 16, 3)\n",
     "        \n",
     "        self.fc1 = nn.Linear(16 * 5 * 5, 128)\n",
     "        self.fc2 = nn.Linear(128, 10)\n",
@@ -220,21 +220,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "e52838e8-a9e0-470d-abdb-57914b434963",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-13T00:40:14.260469Z",
-     "iopub.status.busy": "2025-12-13T00:40:14.259482Z",
-     "iopub.status.idle": "2025-12-13T00:40:14.277972Z",
-     "shell.execute_reply": "2025-12-13T00:40:14.275946Z",
-     "shell.execute_reply.started": "2025-12-13T00:40:14.260404Z"
+     "iopub.execute_input": "2025-12-13T13:57:05.859800Z",
+     "iopub.status.busy": "2025-12-13T13:57:05.856902Z",
+     "iopub.status.idle": "2025-12-13T13:57:05.947893Z",
+     "shell.execute_reply": "2025-12-13T13:57:05.946066Z",
+     "shell.execute_reply.started": "2025-12-13T13:57:05.859734Z"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "data = FashionMNIST_CNN()\n",
+    "data = CNN_Tanh()\n",
     "\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(data.parameters(), lr=0.01)"
@@ -242,15 +242,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "e8c2edb6-1b51-4b04-bb7c-40241a3d02d4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-13T00:52:34.653453Z",
-     "iopub.status.busy": "2025-12-13T00:52:34.652446Z",
-     "iopub.status.idle": "2025-12-13T00:53:59.759987Z",
-     "shell.execute_reply": "2025-12-13T00:53:59.757144Z",
-     "shell.execute_reply.started": "2025-12-13T00:52:34.653392Z"
+     "iopub.execute_input": "2025-12-13T13:57:05.949867Z",
+     "iopub.status.busy": "2025-12-13T13:57:05.949277Z",
+     "iopub.status.idle": "2025-12-13T14:00:08.856561Z",
+     "shell.execute_reply": "2025-12-13T14:00:08.849062Z",
+     "shell.execute_reply.started": "2025-12-13T13:57:05.949815Z"
     },
     "tags": []
    },
@@ -259,32 +259,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/21, Loss: 0.3448\n",
-      "Epoch 2/21, Loss: 0.3481\n",
-      "Epoch 3/21, Loss: 0.3399\n",
-      "Epoch 4/21, Loss: 0.3397\n",
-      "Epoch 5/21, Loss: 0.3367\n",
-      "Epoch 6/21, Loss: 0.3310\n",
-      "Epoch 7/21, Loss: 0.3330\n",
-      "Epoch 8/21, Loss: 0.3246\n",
-      "Epoch 9/21, Loss: 0.3269\n",
-      "Epoch 10/21, Loss: 0.3214\n",
-      "Epoch 11/21, Loss: 0.3197\n",
-      "Epoch 12/21, Loss: 0.3170\n",
-      "Epoch 13/21, Loss: 0.3158\n",
-      "Epoch 14/21, Loss: 0.3116\n",
-      "Epoch 15/21, Loss: 0.3099\n",
-      "Epoch 16/21, Loss: 0.3077\n",
-      "Epoch 17/21, Loss: 0.3055\n",
-      "Epoch 18/21, Loss: 0.3033\n",
-      "Epoch 19/21, Loss: 0.2997\n",
-      "Epoch 20/21, Loss: 0.2976\n",
-      "Epoch 21/21, Loss: 0.2953\n"
+      "Epoch 1/25, Loss: 2.3055\n",
+      "Epoch 2/25, Loss: 2.2617\n",
+      "Epoch 3/25, Loss: 2.1271\n",
+      "Epoch 4/25, Loss: 1.8762\n",
+      "Epoch 5/25, Loss: 1.5123\n",
+      "Epoch 6/25, Loss: 1.2194\n",
+      "Epoch 7/25, Loss: 1.2062\n",
+      "Epoch 8/25, Loss: 1.3807\n",
+      "Epoch 9/25, Loss: 1.5756\n",
+      "Epoch 10/25, Loss: 1.0690\n",
+      "Epoch 11/25, Loss: 1.0043\n",
+      "Epoch 12/25, Loss: 1.0995\n",
+      "Epoch 13/25, Loss: 1.0486\n",
+      "Epoch 14/25, Loss: 0.9427\n",
+      "Epoch 15/25, Loss: 0.9238\n",
+      "Epoch 16/25, Loss: 0.9449\n",
+      "Epoch 17/25, Loss: 0.9386\n",
+      "Epoch 18/25, Loss: 0.9021\n",
+      "Epoch 19/25, Loss: 0.8574\n",
+      "Epoch 20/25, Loss: 0.8203\n",
+      "Epoch 21/25, Loss: 0.7980\n",
+      "Epoch 22/25, Loss: 0.7820\n",
+      "Epoch 23/25, Loss: 0.7587\n",
+      "Epoch 24/25, Loss: 0.7303\n",
+      "Epoch 25/25, Loss: 0.7210\n"
      ]
     }
    ],
    "source": [
-    "epochs =  21 \n",
+    "epochs =  25 \n",
     "\n",
     "for epoch in range(epochs):\n",
     "    optimizer.zero_grad()\n",
@@ -300,15 +304,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "ff1e744a-7cc4-4aa5-84ff-dbe0a1739461",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-13T00:53:59.845298Z",
-     "iopub.status.busy": "2025-12-13T00:53:59.843888Z",
-     "iopub.status.idle": "2025-12-13T00:54:00.457013Z",
-     "shell.execute_reply": "2025-12-13T00:54:00.454552Z",
-     "shell.execute_reply.started": "2025-12-13T00:53:59.845224Z"
+     "iopub.execute_input": "2025-12-13T14:00:08.939314Z",
+     "iopub.status.busy": "2025-12-13T14:00:08.875172Z",
+     "iopub.status.idle": "2025-12-13T14:00:09.755991Z",
+     "shell.execute_reply": "2025-12-13T14:00:09.753539Z",
+     "shell.execute_reply.started": "2025-12-13T14:00:08.939249Z"
     },
     "tags": []
    },
@@ -317,7 +321,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation accuracy: 0.8560000061988831\n"
+      "Validation accuracy: 0.7384999990463257\n"
      ]
     }
    ],
